# Nanopore_analysis

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Dockerfile  Dockerfile.base  Dockerfile.dev  Dockerfile.test  README.md  README.txt  config.yaml  environment.yml  install.py  main.py  nanopore_analysis  pipeline_controller.py  pyproject.toml  script.sh  setup.py  tutorial.md
analysis/: analysis_logic.py
scripts/: 00_setup.py  00_setup.sh  01_basecalling.py  01_basecalling.sh  02_alignment.py  02_alignment.sh  03_alignment_qc.py  03_alignment_qc.sh  04_methylation_summary.py  04_methylation_summary.sh  analysis_logic.py  deconvolution.py  deconvolution_prep.py  script.sh
scripts/utils/: file_conversion.py  logger.py  logging.sh  runner.py
src/: 00_setup.py  00_setup.sh  01_basecalling.py  01_basecalling.sh  02_alignment.py  03_alignment_qc.py  04_methylation_summary.py  04_methylation_summary.sh  __init__.py  deconvolution.py  deconvolution_analysis.py  deconvolution_prep.py  pipeline_controller.py  run_pipeline.py
src/analysis/: analysis_parsers.py  filter_bam_by_length.py  summarise_lengths.py
src/config/: loader.py  models.py  paths.py  validators.py
src/pipeline/: 00_setup.py  01_basecalling.py  02_alignment.py  03_alignment_qc.py  04_methylation_summary.py  alignment.py  basecalling.py  deconvolution.py  deconvolution_prep.py  full_pipeline.py  methylation.py
src/utils/: atlas_tools.py  cli_utils.py  config.py  config_utils.py  decorators.py  file_conversion.py  file_utils.py  (+10 more)
tutorial/: config.tutorial.yaml  config.yaml  tutorial.md
